<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportActivity">
    <TextView
            android:text="@string/x_label"
            android:layout_width="120dp"
            android:layout_height="37dp" android:id="@+id/report_max_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_title_tv"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_avg_x_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_x_tv" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.473"/>
    <TextView
            android:text="@string/x_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_average_title_tv" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_avg_x_tv" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_avg_y_tv" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_max_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_x_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_y_tv" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_avg_y_tv"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_max_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_y_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_z_tv" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_avg_z_tv"
            app:layout_constraintHorizontal_bias="0.526"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_min_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_min_x_tv"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_min_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_min_y_tv"/>
    <Button
            android:text="Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/return_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toEndOf="@+id/switch_btn" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.978" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/_dynamic" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.725"/>
    <Button
            android:text="@string/stairs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/_dynamic"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.725"/>
    <TextView
            android:text="@string/min_title"
            android:layout_width="80dp"
            android:layout_height="38dp" android:id="@+id/report_min_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/report_max_title_tv"/>
    <TextView
            android:text="@string/x_label"
            android:layout_width="123dp"
            android:layout_height="34dp" android:id="@+id/report_min_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_min_title_tv" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/max_title"
            android:layout_width="80dp"
            android:layout_height="38dp" android:id="@+id/report_max_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_switch_title_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_title_tv" android:layout_marginStart="74dp"
            android:layout_marginEnd="66dp" app:layout_constraintEnd_toStartOf="@+id/report_average_title_tv"
            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.333"/>
    <TextView
            android:text="@string/average_title"
            android:layout_width="87dp"
            android:layout_height="39dp" android:id="@+id/report_average_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/report_switch_title_tv"/>
    <TextView
            android:text="@string/flat_title"
            android:layout_width="92dp"
            android:layout_height="49dp" android:id="@+id/report_switch_title_tv"
            android:textSize="28sp" android:textStyle="bold|italic"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.441"
            tools:layout_editor_absoluteY="26dp" android:textColor="@android:color/holo_green_dark"/>
    <TextView
            android:text="Report"
            android:layout_width="108dp"
            android:layout_height="54dp" android:id="@+id/report_title_tv"
            android:textSize="34sp" android:textStyle="bold|italic"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.027"
            android:textColor="@android:color/background_dark"/>
    <ListView
            android:layout_width="402dp"
            android:layout_height="405dp"
            tools:layout_editor_absoluteX="3dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/report_max_z_tv"
            android:id="@+id/listView"/>
    <TextView
            android:text="@string/init_steps"
            android:layout_width="109dp"
            android:layout_height="31dp" android:id="@+id/report_step_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/report_switch_title_tv"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/init_flights"
            android:layout_width="109dp"
            android:layout_height="31dp" android:id="@+id/report_flightcounter_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/report_switch_title_tv"
            android:layout_marginStart="8dp" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/report_step_tv" android:visibility="invisible"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/report_average_title_tv"/>

</android.support.constraint.ConstraintLayout>